--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -12,7 +12,7 @@ layout: default
       </li>
       <li>
           <i class="fa fa-globe" aria-hidden="true"></i>
-          <span><a href="http://jacobsmith.io">jacobsmith.io</a></span>
+          <span><a href="http://systemist.org">systemist.org</a></span>
       </li>
       <li>
           <i class="fa fa-phone" aria-hidden="true"></i>
@@ -26,11 +26,11 @@ layout: default
   <ul>
       <li>
           <i class="fa fa-linkedin" aria-hidden="true"></i>
-          <span><a href="https://linkedin.com/in/iakobos">iakobos</a></span>
+          <span><a href="https://linkedin.com/in/systemist">systemist</a></span>
       </li>
       <li>
           <i class="fa fa-github" aria-hidden="true"></i>
-          <span><a href="https://github.com/iakobos">iakobos</a></span>
+          <span><a href="https://github.com/systemist">systemist</a></span>
       </li>
   </ul>
 </div>
