--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -1,20 +1,22 @@
 @media print  {
-  @page { margin: 0; }
+  .resume {
+    @page { margin: 0; }
 
-  header,
-  footer {
-    display: none;
-  }
+    header,
+    footer {
+      display: none;
+    }
 
-  .container {
-    border: 0;
-  }
+    .container {
+      border: none;
+    }
 
-  .hidden-print {
-    display: none;
-  }
+    .hidden-print {
+      display: none;
+    }
 
-  .visible-print-block {
-    display: block;
+    .visible-print-block {
+      display: block;
+    }
   }
 }
