--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -8,11 +8,11 @@ layout: default
   <ul>
       <li>
           <i class="fa fa-envelope" aria-hidden="true"></i>
-          <span><a href="mailto:jacob@jacobsmith.io">jacob@jacobsmith.io</a></span>
+          <span><a href="mailto:jacob@smithjs.org">jacob@smithjs.org</a></span>
       </li>
       <li>
           <i class="fa fa-globe" aria-hidden="true"></i>
-          <span><a href="http://systemist.org">systemist.org</a></span>
+          <span><a href="http://smithjs.org">smithjs.org</a></span>
       </li>
       <li>
           <i class="fa fa-phone" aria-hidden="true"></i>
@@ -30,7 +30,7 @@ layout: default
       </li>
       <li>
           <i class="fa fa-github" aria-hidden="true"></i>
-          <span><a href="https://github.com/systemist">systemist</a></span>
+          <span><a href="https://github.com/jacobthemyth">jacobthemyth</a></span>
       </li>
   </ul>
 </div>
