--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -1,5 +1,16 @@
 @media print  {
-  @page { margin: 0; }
+  @page {
+    margin: 0.25in;
+  }
+
+  [role="main"] {
+    margin: 0;
+  }
+
+  .break-after-page {
+    break-after-page: page;
+    page-break-after: always;
+  }
 
   header,
   footer {
