--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -4,42 +4,38 @@ layout: default
 <h1 class="visible-print-block" aria-hidden="true">Jacob Smith</h1>
 <h2 class="hidden-print">Resume</h2>
 
+<ul class="resume__actions hidden-print">
+  <li><a class="btn" href="/downloads/Jacob Smith - Resume.pdf" target="_blank"><i class="fa fa-download"></i>Download</a></li>
+  <li><button class="inverted js-print"><i class="fa fa-print"></i>Print</button></li>
+</ul>
+
 <div class="resume__basic-info">
   <ul>
       <li>
-          <i class="fa fa-envelope" aria-hidden="true"></i>
-          <span><a href="mailto:jacob@smithjs.org">jacob@smithjs.org</a></span>
+          <i class="fa fa-map-marker" aria-hidden="true"></i>
+          <span>Greenville, SC</span>
       </li>
       <li>
-          <i class="fa fa-globe" aria-hidden="true"></i>
-          <span><a href="http://smithjs.org">smithjs.org</a></span>
+          <i class="fa fa-envelope" aria-hidden="true"></i>
+          <span><a href="mailto:jacob@smithjs.org">jacob@smithjs.org</a></span>
       </li>
       <li>
           <i class="fa fa-phone" aria-hidden="true"></i>
           <span><a href="tel:864-660-9838">(864) 660-9838</a></span>
       </li>
       <li>
-          <i class="fa fa-map-marker" aria-hidden="true"></i>
-          <span>Greenville, SC</span>
-      </li>
-  </ul>
-  <ul>
-      <li>
           <i class="fa fa-linkedin" aria-hidden="true"></i>
-          <span><a href="https://linkedin.com/in/systemist">systemist</a></span>
+          <span><a href="https://linkedin.com/in/jacobthemyth">linkedin.com/in/jacobthemyth</a></span>
       </li>
       <li>
           <i class="fa fa-github" aria-hidden="true"></i>
-          <span><a href="https://github.com/jacobthemyth">jacobthemyth</a></span>
+          <span><a href="https://github.com/jacobthemyth">github.com/jacobthemyth</a></span>
       </li>
   </ul>
 </div>
 
 <hr>
 
+<div class="resume__content">
 {{ content }}
-
-<ul class="resume__actions hidden-print">
-  <li><a class="btn" href="/downloads/Jacob Smith - Resume.pdf" target="_blank"><i class="fa fa-download"></i>Download</a></li>
-  <li><button class="inverted js-print"><i class="fa fa-print"></i>Print</button></li>
-</ul>
+</div>
