--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -20,6 +20,7 @@
   // use div to make more specific than .container
   div.container {
     border: none;
+    background-color: transparent;
   }
 
   .hidden-print {
