--- a/_sass/pages/_resume.scss
+++ b/_sass/pages/_resume.scss
@@ -18,17 +18,57 @@
 
     li {
       margin: 0.5em;
+      display: inline-block;
     }
 
     .btn,
     button {
-      width: 100%;
+      width: 200px;
     }
 
   }
 
   @media print {
-    font-size: 12px;
+    font-size: 11px;
+
+    li {
+      font-size: 11px;
+    }
+
+    .resume__content li {
+      list-style: inside;
+      margin-left: 12px;
+    }
+
+    h1 {
+      font-size: 24px;
+    }
+
+    h2 {
+      font-size: 14px;
+    }
+
+    h3 {
+      font-size: 12px;
+    }
+
+    .inline-left {
+      width: 33%;
+      display: inline-block;
+      text-align: left;
+    }
+
+    .inline-center {
+      width: 33%;
+      display: inline-block;
+      text-align: center;
+    }
+
+    .inline-right {
+      width: 33%;
+      display: inline-block;
+      text-align: right;
+    }
 
     hr {
       margin: $small-spacing;
@@ -42,7 +82,7 @@
     h2,
     h3,
     h4 {
-      margin: ($small-spacing / 2) 0;
+      margin: 0;
     }
   }
 }
